methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:29: error: not found: type int
  avance(3:int) 
           ^